# Linux-basics-2020

./: Dockerfile  FirstPraticeWork  README.md  hw2  musulmanov.txt  reports:10:МАРТЫНОВ.txt  task1.txt  task2.sh  task2.txt
.github/workflows/: main.yml
reports/: pak.txt  Гараев.txt  Тульчинский.txt  Черепанова.txt
reports/work/: etc.txt
seminar 05/: CMakeLists.txt  Makefile  bio.md  main.cpp  task1.txt  task2.sh  task3.sh
seminar01/: task01.md
seminar01/reports/: Климов.txt  Климович.txt  СКАЛЬТ.txt  Тульчинский.txt  Тюряев.txt  Черепанова.txt
seminar01/work/: ls-etc.txt  tail.txt
seminar02/: README.md  checker.py
seminar02/examples/: sum.sh  test_sum.py
seminar02/task01/: .task01.sh.swo  .task01.sh.swp  table.txt  task01.sh  test01.py
seminar02/task02/: numbers.txt  task02.sh  test02.py
seminar02/task03/: .task03.sh.swp  task03.sh
seminar02/task04/: .task04.sh.swp  main.py  task04.sh  test04.py
seminar02/task05/: .task05.sh.swp  file.property  task05.sh
seminar02/task06/: task06.sh  test06.py  urls.txt
seminar02/task07/: digits.txt  task07.sh  test07.py
seminar02/task08/: task08.sh  test08.py
seminar02/task09/: emails.txt  task09.sh  test09.py
seminar03/: checker.py
seminar03/task01/: rnd.txt  task01.sh  test01.py
seminar03/task02/: task02.sh  test02.py
seminar03/task03/: task03.sh  (+1 more)
seminar04/: checker.py
seminar04/task02/: CMakeLists.txt  test02.py
seminar04/task02/src/: main.cpp
seminar05/: CMakeLists.txt  Makefile  main.cpp  release_notes.md  task1.txt  task2.sh  task3.sh
seminar07/: Dockerfile  task1.txt  task2.txt
(+49 files in other folders)
